--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "lucide-react": "^0.288.0",
     "next": "14.0.3",
     "react": "^18",
